# AppGate

./: .gitignore  ApplicationInfo.h  CMakeLists.txt  FirewallManager.cpp  FirewallManager.h  InstalledAppsManager.cpp  InstalledAppsManager.h  LICENSE  Models.h  ProcessManager.cpp  ProcessManager.h  README.md  Utils.cpp  Utils.h  main.cpp  usage.md
